<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BundleTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">请您输入注册的信息</string>
    <string name="username">用户名：</string>
    <string name="password">密码：</string>
    <string name="sex">性别：</string>
    <string name="regist">注册</string>
    <string name="title_activity_result">ResultActivity</string>

</resources>